<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="268dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="67dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="sendUsername"
        android:text="OK"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_join"
        android:layout_width="74dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:onClick="sendJoin"
        android:text="@string/button_join"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button_rock"
        android:layout_width="77dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="sendPlay"
        android:tag="@string/button_rock"
        android:text="@string/button_rock"
        app:layout_constraintBottom_toTopOf="@+id/gameHistory"
        app:layout_constraintEnd_toStartOf="@+id/button_paper"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_paper"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="8dp"
        android:onClick="sendPlay"
        android:tag="@string/button_paper"
        android:text="@string/button_paper"
        app:layout_constraintBottom_toTopOf="@+id/gameHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_scissor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="sendPlay"
        android:tag="@string/button_scissor"
        android:text="@string/button_scissor"
        app:layout_constraintBottom_toTopOf="@+id/gameHistory"
        app:layout_constraintEnd_toStartOf="@+id/button_join"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toEndOf="@+id/button_paper"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/gameHistory"
        android:layout_width="373dp"
        android:layout_height="329dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/button_quit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_quit"
        android:layout_width="56dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="sendQuit"
        android:text="@string/button_quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
